deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barcode-client
  namespace: default
  labels:
    app: barcode-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barcode-client
  template:
    metadata:
      labels:
        app: barcode-client
    spec:
      containers:
        - name: barcode-client
          image: ghcr.io/beep-software/barcode-client:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: barcode-client-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: barcode-client
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barcode-client-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: caldwell.beepsoftware.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: barcode-client-service
                port:
                  number: 80
